--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -26,6 +26,7 @@ ui-popup {
         }
         & > *:nth-child(2) {
             flex: 1;
+            overflow: auto;
         }
         ui-list ul {
             border: 0;
